<?xml version="1.0" encoding="utf-8"?>

<!-- ACTION BAR MENU -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fs.wtd.WTD" >

    	<!-- NEW TASK -->
        <item
	        android:id="@+id/action_new"
	        android:orderInCategory="10"
	        android:icon="@drawable/ic_action_new"
	        android:title="@string/action_new"
	        app:showAsAction="ifRoom"
	        />
    
        <!-- REMOVE ALL TASKS MARKED AS DONE -->
    	<item
	        android:id="@+id/action_removeAllDoneTasks"
	        android:orderInCategory="20"
	        android:icon="@drawable/ic_action_discard"
	        android:title="@string/action_removeDone"
	        app:showAsAction="never"
	        />
    
    	<!-- CHANGE SETTINGS -->
		<item
	        android:id="@+id/action_settings"
	        android:orderInCategory="70"
	        android:icon="@drawable/ic_action_settings"
	        android:title="@string/action_settings"
	        app:showAsAction="never"
	        />
		
		<!-- ABOUT OF DIALOG -->
       	<item
	        android:id="@+id/action_about"
	        android:orderInCategory="90"
	        android:icon="@drawable/ic_action_help"
	        android:title="@string/action_about"
	        app:showAsAction="never"
	        />

</menu>
