<?xml version="1.0" encoding="utf-8"?>

<!-- VALUES FOR THE INPUT DIALOG USED BY NEW TASK AND EDIT TASK -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    >
    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="5dp"
		    >
		
			    <!-- LABEL -->
				<TextView 
				    android:id="@+id/input_priority" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/input_priority"
				    android:textColor="@color/black"
				    /> 
				        
			    <!-- VALUE -->
				<Spinner 
				    android:id="@+id/input_spinnerPriority"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
				    android:entries="@array/array_priority"
				    android:prompt="@string/input_priority"
			        android:spinnerMode="dropdown"
				    />
			
				<!-- LABEL -->
				<TextView 
				    android:id="@+id/input_date" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
				    android:text="@string/input_date" 
				    android:textColor="@color/black"
				    /> 
				    
				<!-- TRUE = WITHOUT DATE -->
				<CheckBox
				        android:id="@+id/input_checkBoxDate"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/input_date_chkbox"
				        android:checked="true"
				        />
				    
				<!-- VALUE -->
				<DatePicker
				    android:id="@+id/input_datePicker"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
				    android:calendarViewShown="false"
				    />
			
				<!-- LABEL -->
				<TextView 
				    android:id="@+id/input_label" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/input_task" 
				    android:textColor="@color/black"
				    /> 
				
				<!-- VALUE -->
				<EditText 
				    android:id="@+id/input_text" 
				    android:layout_width="match_parent"
				    android:layout_marginLeft="5dp"
				    android:inputType="text" 
				    android:layout_height="wrap_content"
				    /> 
		    
		</LinearLayout>

</ScrollView>


